--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
     <!-- Styles -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="cs/styles.css">
 </head>
 <body>
     <!-- Notification Container -->
