--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- External Libraries -->
     <script src="https://unpkg.com/jspdf@latest/dist/jspdf.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    
+    <script src="scripts.js"></script>
     <!-- Styles -->
     <link rel="stylesheet" href="cs/styles.css">
 </head>
