--- a/index.html
+++ b/index.html
@@ -157,7 +157,16 @@
             </div>
         </div>
     </div>
-
+<!-- Records Screen -->
+<div id="recordsScreen" class="screen container">
+    <div class="card">
+        <h2 class="title">
+            <span data-lang="en">Recent Inspections</span>
+            <span data-lang="es">Inspecciones Recientes</span>
+        </h2>
+        <div id="recordsContainer" class="records-container"></div>
+    </div>
+</div>
     <!-- User Management Screen -->
     <div id="userManagementScreen" class="screen admin-container">
         <div class="card">
