--- a/index.html
+++ b/index.html
@@ -80,9 +80,12 @@
             </div>
             <div id="currentName" class="title"></div>
             <div id="currentDescription"></div>
-            
+            <!-- Botones de estado -->
             <div class="status-selector">
-                <button class="status-btn status-ok" data-status="ok">OK</button>
+                <button class="status-btn status-ok" data-status="ok">
+                    <span data-lang="en">OK</span>
+                    <span data-lang="es">OK</span>
+                </button>
                 <button class="status-btn status-warning" data-status="warning">
                     <span data-lang="en">Warning</span>
                     <span data-lang="es">Precaución</span>
