--- a/index.html
+++ b/index.html
@@ -232,7 +232,26 @@
             </form>
         </div>
     </div>
-
+<!-- Metrics Screen -->
+<div id="metricsScreen" class="screen admin-container">
+    <div class="card">
+        <h2 class="title">Metrics Dashboard</h2>
+        <div class="metrics-grid">
+            <div class="metric-card">
+                <h3>Weekly Inspections</h3>
+                <div id="weeklyInspectionsChart" class="chart-container"></div>
+            </div>
+            <div class="metric-card">
+                <h3>Issue Distribution</h3>
+                <div id="issueDistributionChart" class="chart-container"></div>
+            </div>
+            <div class="metric-card">
+                <h3>Inspector Performance</h3>
+                <div id="inspectorPerformanceChart" class="chart-container"></div>
+            </div>
+        </div>
+    </div>
+</div>
     <!-- Scripts -->
     <script src="scripts.js"></script>
 </body>
