--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
         </div>
     </div>
 <!-- Admin Dashboard -->
+    <!-- Add after the admin dashboard title -->
+<div class="admin-header">
+    <h2 class="title">Admin Dashboard</h2>
+    <button class="btn btn-secondary" onclick="backToLogin()">
+        <span data-lang="en">Back to Login</span>
+        <span data-lang="es">Volver al Inicio</span>
+    </button>
+</div>
     <div id="adminScreen" class="screen admin-container">
         <div class="card">
             <h2 class="title">Admin Dashboard</h2>
@@ -248,6 +256,35 @@
             <div class="metric-card">
                 <h3>Inspector Performance</h3>
                 <div id="inspectorPerformanceChart" class="chart-container"></div>
+            </div>
+        </div>
+    </div>
+</div>
+    <!-- New Settings Screen HTML -->
+<div id="settingsScreen" class="screen admin-container">
+    <div class="card">
+        <h2 class="title">Settings</h2>
+        <div class="settings-grid">
+            <div class="settings-section">
+                <h3>Application Settings</h3>
+                <div class="setting-item">
+                    <label>Default Language</label>
+                    <select id="defaultLanguage" onchange="updateDefaultLanguage(this.value)">
+                        <option value="en">English</option>
+                        <option value="es">Spanish</option>
+                    </select>
+                </div>
+                <div class="setting-item">
+                    <label>Theme Preference</label>
+                    <select id="themePreference" onchange="updateThemePreference(this.value)">
+                        <option value="light">Light</option>
+                        <option value="dark">Dark</option>
+                    </select>
+                </div>
+                <div class="setting-item">
+                    <label>Auto-save Frequency (minutes)</label>
+                    <input type="number" id="autoSaveInterval" min="1" max="60" value="5">
+                </div>
             </div>
         </div>
     </div>
