--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <!-- Admin Dashboard -->
     <!-- Add after the admin dashboard title -->
 <div class="admin-header">
-    <h2 class="title">Admin Dashboard</h2>
+    <!--<h2 class="title">Admin Dashboard</h2>-->
     <button class="btn btn-secondary" onclick="backToLogin()">
         <span data-lang="en">Back to Login</span>
         <span data-lang="es">Volver al Inicio</span>
