--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Login Screen -->
     <div id="loginScreen" class="screen container">
         <div class="card">
-            <h1 class="title">FleetGuard V 3.1.1</h1>
+            <h1 class="title">FleetGuard V 3.1.2</h1>
             <div class="input-group">
                 <input type="text" id="workerId" 
                        placeholder="Worker ID / ID de Trabajador" 
@@ -270,6 +270,13 @@
             <div class="metric-card">
                 <h3>Inspector Performance</h3>
                 <div id="inspectorPerformanceChart" class="chart-container"></div>
+            </div>
+            <div class="metric-card">
+                <h3>Fleet Overall Condition</h3>
+                <p class="metric-value" id="fleetConditionValue">--</p>
+                <div class="chart-container">
+                    <canvas id="fleetConditionChart"></canvas>
+                </div>
             </div>
         </div>
     </div>
