--- a/index.html
+++ b/index.html
@@ -364,6 +364,6 @@
     </div>
 </div>
     <!-- Scripts -->
-    <script src="scripts.js"></script>
+    <script src="scripts.js" type="module"></script>
 </body>
 </html>
