--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                 <span data-lang="es">Modo Demostración</span>
             </button>
         </div>
+        <!-- Global Controls -->
+    <button id="languageToggleBtn" class="toggle-btn language-toggle" onclick="toggleLanguage()">
+    <span data-lang="en" style="display: none;">🇺🇸 EN</span>
+    <span data-lang="es">🇲🇽 ES</span>
+    </button>
+    <button class="toggle-btn theme-toggle" onclick="toggleTheme()">🌓</button>
     </div>
 
     <!-- Truck ID Screen -->
