--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
         </div>
     </div>
      <!-- Global Controls -->
+    <div id="headBtn">
    
         <button id="languageToggleBtn" class="toggle-btn language-toggle" onclick="toggleLanguage()">
             <span data-lang="en" style="display: none;">🇺🇸 EN</span>
             <span data-lang="es">🇲🇽 ES</span>
         </button>
-        <button class="toggle-btn theme-toggle" onclick="toggleTheme()">🌓</button>
-
+        <button class="toggle-btn1 theme-toggle" onclick="toggleTheme()">🌓</button>
+    </div>
     <!-- Truck ID Screen -->
     <div id="truckIdScreen" class="screen container">
         <div class="card">
