--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <!-- Styles -->
     <link rel="stylesheet" href="cs/styles.css">
 </head>
+<header >
+   
+        <button id="languageToggleBtn" class="toggle-btn language-toggle" onclick="toggleLanguage()">
+            <span data-lang="en" style="display: none;">🇺🇸 EN</span>
+            <span data-lang="es">🇲🇽 ES</span>
+        </button>
+        <button class="toggle-btn1 theme-toggle" onclick="toggleTheme()">🌓</button>
+</header>
 <body>
     <!-- Notification Container -->
     <div id="customNotification" class="custom-notification"></div>
@@ -46,14 +54,7 @@
         </div>
     </div>
      <!-- Global Controls -->
-    <div id="headBtn">
-   
-        <button id="languageToggleBtn" class="toggle-btn language-toggle" onclick="toggleLanguage()">
-            <span data-lang="en" style="display: none;">🇺🇸 EN</span>
-            <span data-lang="es">🇲🇽 ES</span>
-        </button>
-        <button class="toggle-btn1 theme-toggle" onclick="toggleTheme()">🌓</button>
-    </div>
+    
     <!-- Truck ID Screen -->
     <div id="truckIdScreen" class="screen container">
         <div class="card">
