--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
 <body>
     <!-- Notification Container -->
     <div id="customNotification" class="custom-notification"></div>
-
+    ///////////////////////////////////////////////////////
+    <!-- Notification Container pop-up -->
+  <div id="offlinePopup">
+    <h2>Without Internet conection</h2>
+    <p>Try again</p>
+  </div>
+///////////////////////////////////////////////////////////////////
     <!-- Login Screen -->
     <div id="loginScreen" class="screen container">
         <div class="card">
