--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <button class="toggle-btn1 theme-toggle" onclick="toggleTheme()">🌓</button>
 </header>
 <body>
+    <!-- ////////Responsive things//////-->
+  overflow-y: auto; /* Assure the vertical scroll  */
+  box-sizing: border-box;
     <!-- Notification Container -->
     <div id="customNotification" class="custom-notification"></div>
     ///////////////////////////////////////////////////////
