--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
             <span data-lang="en" style="display: none;">🇺🇸 EN</span>
             <span data-lang="es">🇲🇽 ES</span>
         </button>
-        <button class="toggle-btn1 theme-toggle" onclick="toggleTheme()">🌓</button>
+        <button class="toggle-btn theme-toggle" onclick="toggleTheme()">🌓</button>
 </header>
 <body>
     <!-- ////////Responsive things//////-->
-  overflow-y: auto; /* Assure the vertical scroll  */
-  box-sizing: border-box;
+  
     <!-- Notification Container -->
     <div id="customNotification" class="custom-notification"></div>
     ///////////////////////////////////////////////////////
