--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="cs/styles.css">
 </head>
 <header>
+        <button class="back-to-menu" onclick="goToMenu()"></button>
         <button id="languageToggleBtn" class="toggle-btn language-toggle" onclick="toggleLanguage()">
             <span data-lang="en" style="display: none;">🇺🇸 EN</span>
             <span data-lang="es">🇲🇽 ES</span>
