--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 </head>
 <header>
         <button class="back-to-menu" onclick="goToMenu()"></button>
+    <div class="changeBtn">
         <button id="languageToggleBtn" class="toggle-btn language-toggle" onclick="toggleLanguage()">
             <span data-lang="en" style="display: none;">🇺🇸 EN</span>
             <span data-lang="es">🇲🇽 ES</span>
         </button>
         <button class="toggle-btn theme-toggle" onclick="toggleTheme()">🌓</button>
+    </div>
 </header>
 <body>
   
