--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Notification Container -->
     <div id="customNotification" class="custom-notification"></div>
     <!-- Notification Container pop-up -->
-  <div id="offlinePopup">
+  <div id="offlinePopup" class="custom-notification">
     <h2>Without Internet conection</h2>
     <p>Try again</p>
   </div>
