--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                        pattern="(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,12}" 
                        required>
             </div>
+        <div>
             <button class="btn" onclick="login()">
                 <span data-lang="en">Login</span>
                 <span data-lang="es">Iniciar Sesión</span>
