--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             </button>
         </div>
     </div>
+    </div>
      <div id="truckIdScreen" class="screen container">
         <div class="card">
             <h2 class="title">
