--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <!-- Inspection Screen -->
     <div id="inspectionScreen" class="screen container">
-        <div class="card">
+        <div class="card1">
             <div class="progress-container">
                 <div class="progress-bar" id="progressBar"></div>
             </div>
@@ -137,7 +137,7 @@
     </button>
 </div>
     <div id="adminScreen" class="screen admin-container">
-        <div class="card">
+        <div class="card1">
             <h2 class="title">Admin Dashboard</h2>
             <div class="stats-grid">
                 <div class="stat-card">
@@ -175,7 +175,7 @@
     </div>
 <!-- Records Screen -->
 <div id="recordsScreen" class="screen container">
-    <div class="card">
+    <div class="card1">
         <h2 class="title">
             <span data-lang="en">Recent Inspections</span>
             <span data-lang="es">Inspecciones Recientes</span>
@@ -249,7 +249,7 @@
     </div>
 <!-- Metrics Screen -->
 <div id="metricsScreen" class="screen admin-container">
-    <div class="card">
+    <div class="card1">
         <h2 class="title">Metrics Dashboard</h2>
         <div class="metrics-grid">
                     <div class="metric-card">
@@ -315,7 +315,7 @@
 </div>
     <!-- New Records Screen HTML -->
     <div id="recordsScreen" class="screen container">
-    <div class="card">
+    <div class="card1">
         <div class="admin-header">
             <h2 class="title">
                 <span data-lang="en">Recent Inspections</span>
