--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Login Screen -->
     <div id="loginScreen" class="screen container">
         <div class="card">
-            <h1 class="title">FleetGuard V 3.3.9</h1>
+            <h1 class="title">FleetGuard V 3.4.1</h1>
             <div class="input-group">
                 <input type="text" id="workerId" 
                        placeholder="Worker ID / ID de Trabajador" 
@@ -125,13 +125,7 @@
         </div>
     </div>
 <!-- Admin Dashboard -->
-    <!-- Add after the admin dashboard title -->
 <div class="admin-header">
-    <!--<h2 class="title">Admin Dashboard</h2>-->
-    <button class="btn btn-secondary" onclick="backToLogin()">
-        <span data-lang="en">Back to Login</span>
-        <span data-lang="es">Volver al Inicio</span>
-    </button>
 </div>
     <div id="adminScreen" class="screen admin-container">
         <div class="card">
@@ -169,8 +163,38 @@
                 </div>
             </div>
         </div>
-    </div>
-<!-- Records Screen -->
+    </div><!-- Termina la pantalla principal de administradores -->
+        <!-- Nueva pantalla Records Screen -->
+        <div id="recordsScreen" class="screen container">
+            <div class="card">
+                <div class="admin-header">
+                    <h2 class="title">
+                        <span data-lang="en">Recent Inspections</span>
+                        <span data-lang="es">Inspecciones Recientes</span>
+                    </h2>
+                    <div class="records-controls">
+                        <input type="text" id="recordSearchInput" placeholder="Search records..." class="search-input">
+                        <select id="recordFilterStatus" class="filter-select">
+                            <option value="all">All Status</option>
+                            <option value="critical">Critical</option>
+                            <option value="warning">Warning</option>
+                            <option value="ok">OK</option>
+                        </select>
+                        <button class="btn btn-secondary" onclick="exportRecords()">
+                            <span data-lang="en">Export CSV</span>
+                            <span data-lang="es">Exportar CSV</span>
+                        </button>
+                    </div>
+                </div>
+                <div id="recordsContainer" class="records-container"></div>
+                <div class="pagination-controls">
+                    <button id="prevPage" class="btn btn-secondary">←</button>
+                    <span id="pageInfo">Page 1 of 1</span>
+                    <button id="nextPage" class="btn btn-secondary">→</button>
+                </div>
+            </div>
+        </div> <!-- Termina nueva pantalla de registros -->
+<!-- Records Screen 
 <div id="recordsScreen" class="screen container">
     <div class="card">
         <h2 class="title">
@@ -179,7 +203,7 @@
         </h2>
         <div id="recordsContainer" class="records-container"></div>
     </div>
-</div>
+</div> Termina la pantalla de los registros -->
     <!-- User Management Screen -->
     <div id="userManagementScreen" class="screen admin-container">
         <div class="card">
@@ -208,7 +232,7 @@
                 </table>
             </div>
         </div>
-    </div>
+    </div><!-- Termina la pantalla de administracion de usuarios -->
 
     <!-- Admin Sidebar -->
     <button id="menuToggleBtn" onclick="toggleSidebar()" style="display: none;">☰</button>
@@ -221,7 +245,7 @@
             <li onclick="showInspectionRecords()">Inspection Records</li>
             <li onclick="showSettings()">Settings</li>
         </ul>
-    </div>
+    </div><!-- Termina la barra lateral -->
 
     <!-- User Modal -->
     <div id="userModal" class="modal">
@@ -243,7 +267,7 @@
                 <button type="submit" class="btn">Save</button>
             </form>
         </div>
-    </div>
+    </div><!-- Termina carta modal de administracion de usuarios -->
 <!-- Metrics Screen -->
 <div id="metricsScreen" class="screen admin-container">
     <div class="card">
@@ -280,7 +304,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> <!-- Termina pantalla de metricas -->
     <!-- New Settings Screen HTML -->
 <div id="settingsScreen" class="screen admin-container">
     <div class="card">
@@ -310,36 +334,7 @@
         </div>
     </div>
 </div>
-    <!-- New Records Screen HTML -->
-    <div id="recordsScreen" class="screen container">
-    <div class="card">
-        <div class="admin-header">
-            <h2 class="title">
-                <span data-lang="en">Recent Inspections</span>
-                <span data-lang="es">Inspecciones Recientes</span>
-            </h2>
-            <div class="records-controls">
-                <input type="text" id="recordSearchInput" placeholder="Search records..." class="search-input">
-                <select id="recordFilterStatus" class="filter-select">
-                    <option value="all">All Status</option>
-                    <option value="critical">Critical</option>
-                    <option value="warning">Warning</option>
-                    <option value="ok">OK</option>
-                </select>
-                <button class="btn btn-secondary" onclick="exportRecords()">
-                    <span data-lang="en">Export CSV</span>
-                    <span data-lang="es">Exportar CSV</span>
-                </button>
-            </div>
-        </div>
-        <div id="recordsContainer" class="records-container"></div>
-        <div class="pagination-controls">
-            <button id="prevPage" class="btn btn-secondary">←</button>
-            <span id="pageInfo">Page 1 of 1</span>
-            <button id="nextPage" class="btn btn-secondary">→</button>
-        </div>
-    </div>
-</div>
+<!-- Termina las nuevas configuraciones -->
     <!-- Scripts -->
     <script src="scripts.js"></script>
 </body>
