--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
     <span data-lang="es">🇲🇽 ES</span>
     </button>
     <button class="toggle-btn theme-toggle" onclick="toggleTheme()">🌓</button>
+    <button id="logoutBtn" class="logout-btn" onclick="backToLogin()">
+    <span data-lang="en">Logout</span>
+    <span data-lang="es">Cerrar Sesión</span>
+    </button>
 
     <!-- Login Screen -->
     <div id="loginScreen" class="screen container">
         <div class="card">
-            <h1 class="title">FleetGuard V 3.4.3</h1>
+            <h1 class="title">FleetGuard V 3.4.4</h1>
             <div class="input-group">
                 <input type="text" id="workerId" 
                        placeholder="Worker ID / ID de Trabajador" 
