--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Login Screen -->
     <div id="loginScreen" class="screen container">
         <div class="card">
-            <h1 class="title">FleetGuard V 3.4.5</h1>
+            <h1 class="title">FleetGuard V 3.4.6</h1>
             <div class="input-group">
                 <input type="text" id="workerId" 
                        placeholder="Worker ID / ID de Trabajador" 
@@ -198,16 +198,6 @@
                 </div>
             </div>
         </div> <!-- Termina nueva pantalla de registros -->
-<!-- Records Screen 
-<div id="recordsScreen" class="screen container">
-    <div class="card">
-        <h2 class="title">
-            <span data-lang="en">Recent Inspections</span>
-            <span data-lang="es">Inspecciones Recientes</span>
-        </h2>
-        <div id="recordsContainer" class="records-container"></div>
-    </div>
-</div> Termina la pantalla de los registros -->
     <!-- User Management Screen -->
     <div id="userManagementScreen" class="screen admin-container">
         <div class="card">
@@ -252,26 +242,49 @@
     </div><!-- Termina la barra lateral -->
 
     <!-- User Modal -->
-    <div id="userModal" class="modal">
-        <div class="modal-content">
-            <span class="close-modal" onclick="closeUserModal()">&times;</span>
-            <h3 id="modalTitle">Add User</h3>
-            <form id="userForm" onsubmit="handleUserSubmit(event)">
-                <div class="input-group">
-                    <input type="text" id="userId" placeholder="User ID" required>
-                    <input type="text" id="userName" placeholder="Full Name" required>
+<!-- User Modal -->
+<div id="userModal" class="modal">
+    <div class="modal-content">
+        <span class="close-modal" onclick="closeUserModal()">&times;</span>
+        <h3 id="modalTitle">Add User</h3>
+        <form id="userForm" onsubmit="handleUserSubmit(event)">
+            <div class="input-group">
+                <div class="form-field">
+                    <input type="text" id="userId" placeholder="User ID" 
+                           pattern="\d{4,6}" 
+                           title="ID must be 4-6 digits" required>
+                    <small class="hint">ID must be 4-6 digits</small>
+                </div>
+                <div class="form-field">
+                    <input type="text" id="userName" placeholder="Full Name" 
+                           pattern="[A-Za-z\s]{3,50}" 
+                           title="Name must be 3-50 characters long, letters only" required>
+                    <small class="hint">Full name, letters only</small>
+                </div>
+                <div class="form-field">
+                    <input type="email" id="userEmail" placeholder="Email" required>
+                    <small class="hint">Valid email address</small>
+                </div>
+                <div class="form-field">
                     <select id="userRole" required>
                         <option value="">Select Role</option>
                         <option value="admin">Administrator</option>
                         <option value="user">User</option>
                         <option value="auditor">Auditor</option>
                     </select>
-                    <input type="password" id="userPassword" placeholder="Password" required>
+                    <small class="hint">Select user role</small>
                 </div>
-                <button type="submit" class="btn">Save</button>
-            </form>
-        </div>
-    </div><!-- Termina carta modal de administracion de usuarios -->
+                <div class="form-field">
+                    <input type="password" id="userPassword" placeholder="Password" 
+                           pattern="(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,12}"
+                           title="Password must be 6-12 characters with at least one letter and one number" required>
+                    <small class="hint">6-12 chars, at least 1 letter and 1 number</small>
+                </div>
+            </div>
+            <button type="submit" class="btn">Save</button>
+        </form>
+    </div>
+</div><!-- Termina carta modal de administracion de usuarios -->
 <!-- Metrics Screen -->
 <div id="metricsScreen" class="screen admin-container">
     <div class="card">
