--- a/index.html
+++ b/index.html
@@ -121,16 +121,18 @@
     </div>
 <!-- Admin Dashboard -->
 <div class="admin-header">
-    <div class="nav-controls">
-    <button class="toggle-btn language-toggle" onclick="toggleLanguage()">
-        <span data-lang="en" style="display: none;">🇺🇸 EN</span>
-        <span data-lang="es">🇲🇽 ES</span>
-    </button>
-    <button class="toggle-btn theme-toggle" onclick="toggleTheme()">🌓</button>
+<div class="mobile-controls">
     <button class="toggle-btn logout-btn" onclick="backToLogin()">
         <span data-lang="en">Exit</span>
         <span data-lang="es">Salir</span>
     </button>
+    <div class="nav-controls">
+        <button class="toggle-btn language-toggle" onclick="toggleLanguage()">
+            <span data-lang="en" style="display: none;">🇺🇸 EN</span>
+            <span data-lang="es">🇲🇽 ES</span>
+        </button>
+        <button class="toggle-btn theme-toggle" onclick="toggleTheme()">🌓</button>
+    </div>
 </div>
 </div>
     <div id="adminScreen" class="screen admin-container">
